--- a/vignettes/txGeneNetwork.Rmd
+++ b/vignettes/txGeneNetwork.Rmd
@@ -2,32 +2,64 @@
 title: "Transcript, Gene and Gene-set network integration"
 author:
 - name: Izabela Mamede Costa Andrade da Conceição
-  affiliation: Departament of Genétics, Ecology and Evolution, Institute of Biological Sciences, Federal University of Minas Gerais (UFMG) - Brazil
-- name: Lúcio Rezende Queiroz
-  affiliation: Departament of Biochemistry and Immunology, Institute of Biological Sciences, Federal University of Minas Gerais (UFMG) - Brazil
+  affiliation: Departament of Genetics, Ecology and Evolution, Institute of Biological Sciences, Federal University of Minas Gerais (UFMG) - Brazil
   email: iza.mamede@gmail.com
-package: Transcript-gene-process network
-output:
-  BiocStyle::html_document
-abstract: |
-This workflow is a comprehensive guideline of how to construct a Process-Gene-Transcript network using the amazing packs [tidygraph] (https://github.com/thomasp85/tidygraph) and [ggraph] (https://github.com/thomasp85/ggraph):
-vignette: |
-  %\VignetteIndexEntry{Vignette Title}
+- name: Lucio Rezende Queiroz
+  affiliation: Departament of Biochemistry and Immunology, Institute of Biological Sciences, Federal University of Minas Gerais (UFMG) - Brazil
+  email: luciorqueiroz@gmail.com
+package: txGeneNetwork
+date: "`r format(Sys.Date(), '%m/%d/%Y')`"
+vignette: >
+  %\VignetteIndexEntry{Transcript, Gene and Gene-set network integration}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+abstract: |
+  This workflow is a comprehensive guideline of how to construct a Pathway-Gene-Transcript network 
+  from transcript expression data using the amazing packs 
+  [tidygraph](https://github.com/thomasp85/tidygraph) and [ggraph](https://github.com/thomasp85/ggraph).
+keywords: RNA-seq, workflow, network, functional analysis
+bibliography: references.bib
+output:
+  BiocStyle::html_document
 ---
+
+<p>
+  **R version**: `r R.version.string`
+  <br />
+  **Bioconductor version**: `r BiocManager::version()`
+  <br />
+  **Package**: `r packageVersion("annotation")`
+</p>
 
 # Getting started
 
 Install and run all needed packages
 
-```{r Package Installing/running, message=FALSE, warning=FALSE}
-if (!require('ggraph')) install.packages('ggraph'); library('ggraph')
-if (!require('tidygraph')) install.packages('tidygraph'); library('tidygraph')
-if (!require('ggforce')) install.packages('ggforce'); library('ggforce')
-if (!require('readr')) install.packages('readr'); library('readr')
-if (!require('tidyr')) install.packages('tidyr'); library('tidyr')
-if (!require('ggnewscale')) install.packages('ggnewscale'); library('ggnewscale')
+```{r install_dependencies, echo=FALSE, message=FALSE, warning=FALSE}
+suppressPackageStartupMessages({
+  if (!require("ggraph")) install.packages("ggraph")
+  library(ggraph)
+  if (!require("tidygraph")) install.packages("tidygraph")
+  library(tidygraph)
+  if (!require("ggforce")) install.packages("ggforce")
+  library(ggforce)
+  if (!require("readr")) install.packages("readr")
+  library(readr)
+  if (!require("tidyr")) install.packages("tidyr")
+  library(tidyr)
+  if (!require("ggnewscale")) install.packages("ggnewscale")
+  library(ggnewscale)
+})
+```
+
+
+```{r load_dependencies}
+library(ggraph)
+library(tidygraph)
+library(ggforce)
+library(readr)
+library(tidyr)
+library(ggnewscale)
 ```
 
 # Input data
@@ -42,130 +74,149 @@ Your input data must be organized as a .csv with **From** and **To** Columns, fo
 
 Other metadata columns which will correspond to the **edges** info can be added and will also be imported, for this type of network we add a Process column, or to which metabolic process that edge belongs to and a Direction column, to show if that transcript is up or down regulated in our example data.
 
-| From      | To       |Process| Direction
-|-----------|----------|--------|---------
-| Process_1 | Gene_1       |Process_1|NA
-| Gene_1    | Transcript_1 |Process_1|Up
-| Gene_1    | Transcript_2 |Process_1|Down
+| From      | To       | Process | Direction |
+|-----------|----------|--------|----------|
+| Process_1 | Gene_1       | Process_1 | NA   |
+| Gene_1    | Transcript_1 | Process_1 | Up   |
+| Gene_1    | Transcript_2 | Process_1 | Down |
 
 # Plotting
-Tidygraph uses a two tibble format, one for nodes and one for edges and displays it as a **tbl_graph** object, using a tidy manner to display both tibbles together
+
+`tidygraph` uses a two tibble format, one for nodes and one for edges and displays it as a **tbl_graph** object, using a tidy manner to display both tibbles together
 
 ```{r message=FALSE, warning=FALSE}
-example_dataset <- read_csv("example dataset.csv")
+example_dataset <- read_csv("example_dataset.csv")
 ```
+
 The tbl_graph() command allows you to directly create a tbl_graph object using our .csv table
+
 ```{r}
 example_tbl_graph <- as_tbl_graph(example_dataset)
 example_tbl_graph
 ```
+
 ## Modified ggplot2 syntax
+
 Now that we have the tbl_graph object we can start plotting the data. GGraph uses a syntax very similar to ggplot2 and most of the addons used in ggplot2 can also be used in ggraph, like ggthemes() and ggrepel().
 To start we will construct the basic network using the example data and after we add extra information for nodes and for edges.
 We will use geom_node_point() and geom_edge_link() for the basic network.
 
 ```{r fig1, fig.height=3, fig.width=5}
 example_tbl_graph %>%
-  ggraph()+
-  geom_node_point()+
+  ggraph() +
+  geom_node_point() +
   geom_edge_link()
 ```
 
-We got a warning, that ggraph used *sugiyama* as default layout, that can be changed passing an argument to ggraph call.
+We got a message, saying that `ggraph` used *sugiyama* as default layout, that can be changed passing an argument to the `ggraph()` function call.
 
 ```{r fig2, fig.height=3, fig.width=3}
 example_tbl_graph %>%
-  ggraph(layout = 'kk')+
-  geom_node_point()+
+  ggraph(layout = "kk") +
+  geom_node_point() +
   geom_edge_link()
-
 ```
+
 Now we have a network more similar to the final product. 
-To modify our tbl_graph object and add other variables you can use usual syntax together with the activate() function. The activate() will select which of the tibbles you are modifying
-the nodes or the edges tibble. Here we add a centrality measure to the network and size it accordingly using an aes() call inside geom_node_point()
+To modify our `tbl_graph` object and add other variables you can use usual `dplyr` syntax together with the `activate()` function.
+The `activate()` will select which of the tibbles you are modifying the nodes or the edges tibble.
+Here we add a centrality measure[ADD REFERENCE] to the network and size it accordingly using an `aes()` call inside `geom_node_point()`.
 
 ```{r fig3, fig.height=3, fig.width=4}
 example_tbl_graph %>%
   mutate(centrality = centrality_power()) %>%
-  ggraph(layout = 'kk')+
-  geom_node_point(aes(size = centrality))+
+  ggraph(layout = "kk") +
+  geom_node_point(aes(size = centrality)) +
   geom_edge_link()
 ```
-We can also color de edges according to the process they belong to, or to the direction of the transcript expression, using a similar syntax, but now adding an aes() call inside geom_edge_link()
+
+We can also color de edges according to the process they belong to, or to the direction of the transcript expression, using a similar syntax, but now adding an `aes()` call inside `geom_edge_link()`.
 
 ```{r fig4, fig.height=3, fig.width=4}
 example_tbl_graph %>%
   mutate(centrality = centrality_power()) %>%
-  ggraph(layout = 'kk')+
-  geom_edge_link(aes(col = Direction))+
+  ggraph(layout = "kk") +
+  geom_edge_link(aes(col = Direction)) +
   geom_node_point(aes(size = centrality))
-
 ```
 
 ```{r fig5, fig.height=3, fig.width=6}
 example_tbl_graph %>%
   mutate(centrality = centrality_power()) %>%
-  ggraph(layout = 'kk')+
-  geom_edge_link(aes(col = Group))+
+  ggraph(layout = "kk") +
+  geom_edge_link(aes(col = Group)) +
   geom_node_point(aes(size = centrality))
 ```
 
 As there are genes which belong to more than one process, this is not an adequate process visualization, the best way would be plotting it as individual hulls, but we get to that down the workflow.
 
-
 ## Adding information on the nodes
 
 For now in our example table we only added aesthetics to the edges, now we will add the transcript_type and the hull aesthetic. First you can extract the nodes table to then modify it using
+
 ```{r message=FALSE}
 as_tibble(example_tbl_graph %>% activate(nodes))
 ```
+
 Saving this on an object allows you to save and modify at will your nodes table. Here we load the modified table version
+
 ```{r message=FALSE, warning=FALSE}
 modified_nodes <- read_csv("modified_nodes.csv")
 ```
+
 We now add the transcript modified information in our tbl_graph object and plot it using the aes(col)
+
 ```{r fig6, fig.height=4.5, fig.width=6.5}
-example_tbl_graph %>% activate(nodes) %>%
-  mutate(Type= modified_nodes$Type)%>%
+example_tbl_graph %>%
+  activate(nodes) %>%
+  mutate(Type = modified_nodes$Type) %>%
   mutate(centrality = centrality_power()) %>%
-  ggraph(layout = 'kk')+
-  geom_edge_link(aes(col = Direction))+
+  ggraph(layout = "kk") +
+  geom_edge_link(aes(col = Direction)) +
   geom_node_point(aes(size = centrality, color = Type))
-  
 ```
 
-The geom_mark_hull(), the function to add the hull colors as process, does not work well with the tbl_graph object due to not being able to add multiple information for the same node in the same color. So the best way to color hulls is to add extra columns representing these sobrepositions and do one geom_mark_hull() call for each.
+The geom_mark_hull(), the function to add the hull colors as process, does not work well with the `tbl_graph` object due to not being able to add multiple information for the same node in the same color. So the best way to color hulls is to add extra columns representing these sobrepositions and do one geom_mark_hull() call for each.
 
 ```{r fig7, fig.height=7, fig.width=10}
-example_tbl_graph %>% activate(nodes) %>%
-  mutate(Type = modified_nodes$Type, Process = modified_nodes$Process_1, Process_2 = modified_nodes$Process_2, Process_3 = modified_nodes$Process_3)%>%
-  mutate(centrality = centrality_power()) %>% 
-  ggraph(layout = 'kk')+
-  geom_mark_hull(aes(x= x, y= y, fill = Process, color = Process))+
-  geom_mark_hull(aes(x= x, y= y, fill = Process_2, color = Process_2))+
-  geom_mark_hull(aes(x= x, y= y, fill = Process_3, color = Process_3))+
-  geom_edge_link(aes(col = Direction))+
-  new_scale("color")+
+example_tbl_graph %>%
+  activate(nodes) %>%
+  mutate(Type = modified_nodes$Type, Process = modified_nodes$Process_1, Process_2 = modified_nodes$Process_2, Process_3 = modified_nodes$Process_3) %>%
+  mutate(centrality = centrality_power()) %>%
+  ggraph(layout = "kk") +
+  geom_mark_hull(aes(x = x, y = y, fill = Process, color = Process)) +
+  geom_mark_hull(aes(x = x, y = y, fill = Process_2, color = Process_2)) +
+  geom_mark_hull(aes(x = x, y = y, fill = Process_3, color = Process_3)) +
+  geom_edge_link(aes(col = Direction)) +
+  new_scale("color") +
   geom_node_point(aes(size = centrality, color = Type))
 ```
+
 Unfortunately, there is no way to plot this without the NA values due to the tbl_grpah type and how the geom_mark_hull works, so the NA hulls have to be removed a posteriori.
 
 ## Final touches
 
 Now some final touches like legend size and title
+
 ```{r fig8, fig.height=7, fig.width=10}
-example_tbl_graph %>% activate(nodes) %>%
-  mutate(Type = modified_nodes$Type, Process = modified_nodes$Process_1, Process_2 = modified_nodes$Process_2, Process_3 = modified_nodes$Process_3)%>%
-  mutate(centrality = centrality_power()) %>% 
-  ggraph(layout = 'kk')+
-  geom_mark_hull(aes(x= x, y= y, fill = Process, color = Process))+
-  geom_mark_hull(aes(x= x, y= y, fill = Process_2, color = Process_2))+
-  geom_mark_hull(aes(x= x, y= y, fill = Process_3, color = Process_3))+
-  geom_edge_link(aes(col = Direction))+
-  new_scale("color")+
+example_tbl_graph %>%
+  activate(nodes) %>%
+  mutate(Type = modified_nodes$Type, Process = modified_nodes$Process_1, Process_2 = modified_nodes$Process_2, Process_3 = modified_nodes$Process_3) %>%
+  mutate(centrality = centrality_power()) %>%
+  ggraph(layout = "kk") +
+  geom_mark_hull(aes(x = x, y = y, fill = Process, color = Process)) +
+  geom_mark_hull(aes(x = x, y = y, fill = Process_2, color = Process_2)) +
+  geom_mark_hull(aes(x = x, y = y, fill = Process_3, color = Process_3)) +
+  geom_edge_link(aes(col = Direction)) +
+  new_scale("color") +
   geom_node_point(aes(size = centrality, color = Type))
 ```
+
 There, now you have the final network and you only need to save it as .pdf or .csv and remove the NA layer of the hull.
 
 
+
+```{r}
+session_info()
+```
 
