--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,11 +1,11 @@
-@Manual{,
+@Manual{pedersen2020tidygrah,
   title = {tidygraph: A Tidy API for Graph Manipulation},
   author = {Thomas Lin Pedersen},
   year = {2020},
   note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=tidygraph},
 }
-@Manual{,
+@Manual{pedersen2020ggraph,
   title = {ggraph: An Implementation of Grammar of Graphics for Graphs and Networks},
   author = {Thomas Lin Pedersen},
   year = {2020},
